--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,35 @@
-*
-{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html,
-body
-{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 
-.webgl
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
+.webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
+}
+button {
+  position: absolute;
+  display: block;
+  z-index: 99;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Butcherman", cursive;
+  border: none;
+  padding: 40px;
+  font-size: 60px;
+  background-color: transparent;
+  color: white;
+  transition: all 3s;
+  cursor: pointer;
+}
+button:hover {
+  color: red;
 }
