--- a/src/style.css
+++ b/src/style.css
@@ -25,12 +25,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 3s ease;
+  transition: all 3s;
 }
 .hide {
-  transition: all 3s ease;
-
-  opacity: 0;
+  display: none;
 }
 button {
   font-family: "Butcherman", cursive;
@@ -38,8 +36,10 @@ button {
   font-size: 60px;
   background-color: transparent;
   color: white;
-  transition: all 3s;
   cursor: pointer;
+  transition: all 2s;
+
+  word-spacing: 8px;
 }
 button:hover {
   color: red;
